tests/ui/non_static_thread.rs
use std::thread;

fn main() {
    let s = String::from("outer");
    thread::spawn(|| {
        println!("{s}");
    });
}
